feat:查询文件目录，如果是空的则插入bloglist记录

--- a/blog-test/static/html/index.html
+++ b/blog-test/static/html/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    Hello
+    <div id="app">
+        {{list}}
+    </div>
+    <script>
+        const App = new Vue({
+            el:`#app`,
+            data(){
+                return{
+                    list:[]
+                }
+            },
+            async created(){
+                await this.getList()
+            },
+            methods:{
+                async getList(){
+                    const fetchReq = await fetch('/')
+                    const res = await fetchReq.json()
+                    this.list=res
+                    console.log(this.list)
+                }
+            }
+        })
+    </script>
 </body>
 </html>
